// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should render when authed 1`] = `
"<header class=\\"app-header\\">
  <div class=\\"app-header_top-bar\\"></div>
  <div class=\\"app-header_bottom-bar\\">
    <div class=\\"container\\">
      <h1>South Yarra Health and Wellbeing Clinic</h1>
      <p>Welcome Chris</p>
    </div>
  </div>
</header>"
`;

exports[`Header should render when unauthed 1`] = `
"<header class=\\"app-header\\">
  <div class=\\"app-header_top-bar\\"></div>
  <div class=\\"app-header_bottom-bar\\">
    <div class=\\"container\\">
      <h1>South Yarra Health and Wellbeing Clinic</h1><a class=\\"MuiButtonBase-root MuiButton-root MuiButton-contained log-in-button MuiButton-containedPrimary\\" tabindex=\\"0\\" aria-disabled=\\"false\\" href=\\"#/auth\\"><span class=\\"MuiButton-label\\">LOGIN</span><span class=\\"MuiTouchRipple-root\\"></span></a>
    </div>
  </div>
</header>"
`;
